--- a/src/app/recipes/recipes.page.html
+++ b/src/app/recipes/recipes.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Recipes</ion-title>
+    <ion-title>Recipes!!</ion-title>
   </ion-toolbar>
 </ion-header>
 
