--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -3,10 +3,23 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
     </ion-buttons>
-    <ion-title>new-offer</ion-title>
+    <ion-title>New Offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <!-- quitar padding a ion-grid ==========> class="ion-no-padding" -->
+  <ion-grid>
+    <ion-row class="ion-align-items-center ion-justify-content-center">
+      <ion-col size="5" size-sm="4" size-md="2" offset-sm="2" offset-md="4">Row 1 Col 1</ion-col>
+      <ion-col size="1" size-sm="4" size-md="3">
+        <ion-card>
+        <ion-card-content>
+          <h1>The Column</h1>
+          <p>Row 1 Col 2</p>
+        </ion-card-content>
+      </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
