--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -35,11 +35,8 @@
 
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-        <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces.slice(1)"
-          [routerLink]="['/', 'places', 'tabs', 'discover', place.id]"
-          detail
-          >
+        <ion-virtual-scroll [items]="listedLoadedPlaces" approxItemHeight="70px">
+          <ion-item [routerLink]="['/', 'places', 'tabs', 'discover', place.id]" detail *virtualItem="let place">
             <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
               <ion-label></ion-label>
@@ -49,7 +46,7 @@
               <p>{{ place.description }}</p>
             </ion-label>
           </ion-item>
-        </ion-list>
+        </ion-virtual-scroll>
       </ion-col>
     </ion-row>
 
