--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -15,7 +15,12 @@
       <ion-input></ion-input>
     </ion-item>
   </ion-list>
-  <ion-button color="primary" (click)="onLogin()">
-    Login
-  </ion-button>
+  <div class="ion-margin-top ion-text-center">
+    <!-- <div class="ion-text-center">
+      <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+    </div> -->
+    <ion-button color="primary" (click)="onLogin()" *ngIf="!isLoading">
+      Login
+    </ion-button>
+  </div>
 </ion-content>
