Offer item component + icons + css styles

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -236,4 +236,12 @@
 
     --ion-card-background: #1e1e1e;
   }
+  ion-toolbar {
+  ion-button,
+  ion-back-button,
+  ion-menu-button,
+  .sc-ion-back-button-ios-h {
+    --color: white;
+  }
+}
 }
