--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -5,22 +5,34 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-list>
-    <ion-item>
-      <ion-label position="floating">E-Mail</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="floating">Password</ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </ion-list>
-  <div class="ion-margin-top ion-text-center">
-    <!-- <div class="ion-text-center">
+  <ion-grid>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">E-Mail</ion-label>
+            <ion-input type="email"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Password</ion-label>
+            <ion-input type="password"></ion-input>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size-md="6" offset-md="3">
+        <ion-button color="primary" fill="clear" expand="full">Switch to Login</ion-button>
+        <ion-button color="primary"  fill="outline" expand="block" (click)="onLogin()">
+          Login
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+    <!-- SPINNER IN COMPONENT => deactivated
+       <div class="ion-text-center">
       <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
     </div> -->
-    <ion-button color="primary" (click)="onLogin()" *ngIf="!isLoading">
-      Login
-    </ion-button>
-  </div>
-</ion-content>
+
