Fix disabled login/signup button behaviour

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -34,7 +34,7 @@
             Switch to {{ isLogin ? 'Signup' : 'Login' }}
           </ion-button>
           <ion-button type="submit" color="primary" expand="block" (click)="onLogin()" [disabled]="!f.valid">
-            <ion-title>{{ isLogin ? 'Login' : 'Signup' }}</ion-title>
+                {{ isLogin ? 'Login' : 'Signup' }}
           </ion-button>
         </ion-col>
       </ion-row>
