--- a/src/app/places/offers/offer-item/offer-item.component.html
+++ b/src/app/places/offers/offer-item/offer-item.component.html
@@ -6,12 +6,10 @@
     <h1>{{ offer.title }}</h1>
     <div class="offer-details">
       <ion-icon name="calendar" color="primary"></ion-icon>
-      <ion-text color="tertiary">{{
-        getDummyDate() | date
-      }}</ion-text>
+      <ion-text color="tertiary">{{        offer.availableFrom | date      }}</ion-text>
       <span>to</span>
       <ion-icon name="calendar" color="primary"></ion-icon>
-      <ion-text color="tertiary">{{getDummyDate() | date}}</ion-text>
+      <ion-text color="tertiary">{{offer.availableTo | date}}</ion-text>
     </div>
   </ion-label>
 </ion-item>
