--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -10,6 +10,9 @@
 <ion-content>
   <ion-grid>
     <ion-row>
+      <ion-col size-md="6" offset-md="3" *ngIf="!loadedBookings || loadedBookings.length <= 0" class="ion-text-center">
+        <p>No bookings found!</p>
+      </ion-col>
       <ion-col size-md="6" offset-md="3">
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingBooking>
